--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "paper-dashboard-react",
+  "name": "mairie-anyama",
   "version": "1.1.0",
+  "homepage" : ".",
   "private": true,
-  "homepage": "https://demos.creative-tim.com/paper-dashboard-react/#/dashboard",
   "dependencies": {
     "antd": "^3.25.2",
     "axios": "^0.19.0",
     "bootstrap": "4.3.1",
     "chart.js": "2.8.0",
     "core-js": "^3.4.1",
+    "express": "^4.17.1",
     "history": "4.9.0",
+    "json-server": "^0.15.1",
     "jwt-decode": "^2.2.0",
     "mdbreact": "^4.22.1",
     "node-sass": "4.12.0",
