--- a/StackBack/package.json
+++ b/StackBack/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon App.js"
+    "dev": "nodemon App.js",
+    "start": "pm2 start App.js"
   },
   "keywords": [],
   "author": "",
