--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
   "name": "mairie-anyama",
   "version": "1.1.0",
-  "homepage" : ".",
+  "homepage": ".",
   "private": true,
   "dependencies": {
-    "antd": "^3.25.2",
-    "axios": "^0.19.0",
-    "bootstrap": "4.3.1",
-    "chart.js": "2.8.0",
-    "core-js": "^3.4.1",
+    "antd": "^3.26.6",
+    "axios": "^0.19.1",
+    "bootstrap": "4.4.1",
+    "chart.js": "2.9.3",
+    "core-js": "^3.6.2",
     "express": "^4.17.1",
-    "history": "4.9.0",
+    "history": "4.10.1",
     "json-server": "^0.15.1",
     "jwt-decode": "^2.2.0",
-    "mdbreact": "^4.22.1",
+    "mdbreact": "^4.24.0",
+    "moment": "^2.24.0",
     "node-sass": "4.12.0",
     "perfect-scrollbar": "1.4.0",
-    "react": "16.8.6",
-    "react-chartjs-2": "2.7.6",
-    "react-dom": "16.8.6",
+    "react": "16.12.0",
+    "react-chartjs-2": "2.8.0",
+    "react-csv": "^1.1.2",
+    "react-dom": "16.12.0",
     "react-google-maps": "9.4.5",
     "react-notification-alert": "0.0.12",
-    "react-router": "5.0.0",
-    "react-router-dom": "5.0.0",
-    "react-scripts": "3.0.1",
+    "react-router": "5.1.2",
+    "react-router-dom": "5.1.2",
+    "react-scripts": "3.3.0",
     "react-to-print": "^2.5.0",
-    "reactstrap": "8.0.0"
+    "reactstrap": "8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
