--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-csv": "^1.1.2",
     "react-dom": "16.12.0",
     "react-google-maps": "9.4.5",
+    "react-highlight-words": "^0.16.0",
     "react-notification-alert": "0.0.12",
+    "react-particles-js": "^2.7.0",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.3.0",
